[gd_scene load_steps=2 format=3 uid="uid://bunit_stats_panel"]

[ext_resource type="Script" path="res://40k/scripts/UnitStatsPanel.gd" id="1"]

[node name="UnitStatsPanel" type="PanelContainer"]
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
anchor_left = 0.0
offset_top = -300.0
offset_bottom = 0.0
custom_minimum_size = Vector2(0, 300)
script = ExtResource("1")

[node name="VBox" type="VBoxContainer" parent="."]
layout_mode = 2

[node name="Header" type="HBoxContainer" parent="VBox"]
layout_mode = 2
custom_minimum_size = Vector2(0, 40)

[node name="ToggleButton" type="Button" parent="VBox/Header"]
layout_mode = 2
custom_minimum_size = Vector2(120, 30)
text = "â–² Unit Stats"
theme_override_font_sizes/font_size = 14

[node name="Spacer" type="Control" parent="VBox/Header"]
layout_mode = 2
size_flags_horizontal = 3

[node name="MainContent" type="HBoxContainer" parent="VBox"]
layout_mode = 2
size_flags_vertical = 3

[node name="PlayerSection" type="HBoxContainer" parent="VBox/MainContent"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 0.5

[node name="PlayerUnitsPanel" type="PanelContainer" parent="VBox/MainContent/PlayerSection"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 0.4

[node name="VBoxContainer" type="VBoxContainer" parent="VBox/MainContent/PlayerSection/PlayerUnitsPanel"]
layout_mode = 2

[node name="Label" type="Label" parent="VBox/MainContent/PlayerSection/PlayerUnitsPanel/VBoxContainer"]
layout_mode = 2
text = "Player Units"
theme_override_font_sizes/font_size = 14

[node name="PlayerUnitsList" type="ItemList" parent="VBox/MainContent/PlayerSection/PlayerUnitsPanel/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_font_sizes/font_size = 12

[node name="PlayerStatsPanel" type="PanelContainer" parent="VBox/MainContent/PlayerSection"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 0.6

[node name="ScrollContainer" type="ScrollContainer" parent="VBox/MainContent/PlayerSection/PlayerStatsPanel"]
layout_mode = 2

[node name="PlayerStatsContent" type="VBoxContainer" parent="VBox/MainContent/PlayerSection/PlayerStatsPanel/ScrollContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="PlayerKeywordsContainer" type="HBoxContainer" parent="VBox/MainContent/PlayerSection/PlayerStatsPanel/ScrollContainer/PlayerStatsContent"]
layout_mode = 2

[node name="KeywordsTitle" type="Label" parent="VBox/MainContent/PlayerSection/PlayerStatsPanel/ScrollContainer/PlayerStatsContent/PlayerKeywordsContainer"]
layout_mode = 2
text = "Keywords: "
theme_override_font_sizes/font_size = 12

[node name="PlayerKeywordsLabel" type="Label" parent="VBox/MainContent/PlayerSection/PlayerStatsPanel/ScrollContainer/PlayerStatsContent/PlayerKeywordsContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 12

[node name="HSeparator" type="HSeparator" parent="VBox/MainContent/PlayerSection/PlayerStatsPanel/ScrollContainer/PlayerStatsContent"]
layout_mode = 2

[node name="PlayerStatsContainer" type="VBoxContainer" parent="VBox/MainContent/PlayerSection/PlayerStatsPanel/ScrollContainer/PlayerStatsContent"]
layout_mode = 2

[node name="StatsTitle" type="Label" parent="VBox/MainContent/PlayerSection/PlayerStatsPanel/ScrollContainer/PlayerStatsContent/PlayerStatsContainer"]
layout_mode = 2
text = "UNIT STATS"
theme_override_font_sizes/font_size = 14

[node name="PlayerStatsLabel" type="Label" parent="VBox/MainContent/PlayerSection/PlayerStatsPanel/ScrollContainer/PlayerStatsContent/PlayerStatsContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 16

[node name="HSeparator2" type="HSeparator" parent="VBox/MainContent/PlayerSection/PlayerStatsPanel/ScrollContainer/PlayerStatsContent"]
layout_mode = 2

[node name="PlayerWeaponsContainer" type="VBoxContainer" parent="VBox/MainContent/PlayerSection/PlayerStatsPanel/ScrollContainer/PlayerStatsContent"]
layout_mode = 2

[node name="HSeparator3" type="HSeparator" parent="VBox/MainContent/PlayerSection/PlayerStatsPanel/ScrollContainer/PlayerStatsContent"]
layout_mode = 2

[node name="PlayerAbilitiesContainer" type="VBoxContainer" parent="VBox/MainContent/PlayerSection/PlayerStatsPanel/ScrollContainer/PlayerStatsContent"]
layout_mode = 2

[node name="HSeparator4" type="HSeparator" parent="VBox/MainContent/PlayerSection/PlayerStatsPanel/ScrollContainer/PlayerStatsContent"]
layout_mode = 2

[node name="PlayerCompositionContainer" type="VBoxContainer" parent="VBox/MainContent/PlayerSection/PlayerStatsPanel/ScrollContainer/PlayerStatsContent"]
layout_mode = 2

[node name="VSeparator" type="VSeparator" parent="VBox/MainContent"]
layout_mode = 2
theme_override_constants/separation = 10

[node name="EnemySection" type="HBoxContainer" parent="VBox/MainContent"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 0.5

[node name="EnemyUnitsPanel" type="PanelContainer" parent="VBox/MainContent/EnemySection"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 0.4

[node name="VBoxContainer" type="VBoxContainer" parent="VBox/MainContent/EnemySection/EnemyUnitsPanel"]
layout_mode = 2

[node name="Label" type="Label" parent="VBox/MainContent/EnemySection/EnemyUnitsPanel/VBoxContainer"]
layout_mode = 2
text = "Enemy Units"
theme_override_font_sizes/font_size = 14

[node name="EnemyUnitsList" type="ItemList" parent="VBox/MainContent/EnemySection/EnemyUnitsPanel/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_font_sizes/font_size = 12

[node name="EnemyStatsPanel" type="PanelContainer" parent="VBox/MainContent/EnemySection"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 0.6

[node name="ScrollContainer" type="ScrollContainer" parent="VBox/MainContent/EnemySection/EnemyStatsPanel"]
layout_mode = 2

[node name="EnemyStatsContent" type="VBoxContainer" parent="VBox/MainContent/EnemySection/EnemyStatsPanel/ScrollContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="EnemyKeywordsContainer" type="HBoxContainer" parent="VBox/MainContent/EnemySection/EnemyStatsPanel/ScrollContainer/EnemyStatsContent"]
layout_mode = 2

[node name="KeywordsTitle" type="Label" parent="VBox/MainContent/EnemySection/EnemyStatsPanel/ScrollContainer/EnemyStatsContent/EnemyKeywordsContainer"]
layout_mode = 2
text = "Keywords: "
theme_override_font_sizes/font_size = 12

[node name="EnemyKeywordsLabel" type="Label" parent="VBox/MainContent/EnemySection/EnemyStatsPanel/ScrollContainer/EnemyStatsContent/EnemyKeywordsContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 12

[node name="HSeparator" type="HSeparator" parent="VBox/MainContent/EnemySection/EnemyStatsPanel/ScrollContainer/EnemyStatsContent"]
layout_mode = 2

[node name="EnemyStatsContainer" type="VBoxContainer" parent="VBox/MainContent/EnemySection/EnemyStatsPanel/ScrollContainer/EnemyStatsContent"]
layout_mode = 2

[node name="StatsTitle" type="Label" parent="VBox/MainContent/EnemySection/EnemyStatsPanel/ScrollContainer/EnemyStatsContent/EnemyStatsContainer"]
layout_mode = 2
text = "UNIT STATS"
theme_override_font_sizes/font_size = 14

[node name="EnemyStatsLabel" type="Label" parent="VBox/MainContent/EnemySection/EnemyStatsPanel/ScrollContainer/EnemyStatsContent/EnemyStatsContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 16

[node name="HSeparator2" type="HSeparator" parent="VBox/MainContent/EnemySection/EnemyStatsPanel/ScrollContainer/EnemyStatsContent"]
layout_mode = 2

[node name="EnemyWeaponsContainer" type="VBoxContainer" parent="VBox/MainContent/EnemySection/EnemyStatsPanel/ScrollContainer/EnemyStatsContent"]
layout_mode = 2

[node name="HSeparator3" type="HSeparator" parent="VBox/MainContent/EnemySection/EnemyStatsPanel/ScrollContainer/EnemyStatsContent"]
layout_mode = 2

[node name="EnemyAbilitiesContainer" type="VBoxContainer" parent="VBox/MainContent/EnemySection/EnemyStatsPanel/ScrollContainer/EnemyStatsContent"]
layout_mode = 2

[node name="HSeparator4" type="HSeparator" parent="VBox/MainContent/EnemySection/EnemyStatsPanel/ScrollContainer/EnemyStatsContent"]
layout_mode = 2

[node name="EnemyCompositionContainer" type="VBoxContainer" parent="VBox/MainContent/EnemySection/EnemyStatsPanel/ScrollContainer/EnemyStatsContent"]
layout_mode = 2